// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TrackCover [snapshot] should render the "Default" component correctly 1`] = `
<img
  alt="The track cover of G.O.A.T. • Polyphia"
  class="rounded w-16 h-16"
  src="https://picsum.photos/50"
/>
`;

exports[`TrackCover [snapshot] should render the "WithSizeOf6" component correctly 1`] = `
<img
  alt="The track cover of G.O.A.T. • Polyphia"
  class="rounded"
  src="https://picsum.photos/50"
  style="width: 6rem; height: 6rem;"
/>
`;
